--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
       attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
 
-    // Create a custom icon for the marker (optional)
+    // Create a custom icon for the marker (Dog image)
     const customIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/512/684/684908.png', // Example icon URL
-      iconSize: [38, 38] // Adjust icon size
+      iconUrl: 'https://png.pngtree.com/png-vector/20230922/ourmid/pngtree-brown-and-white-dog-png-image_10146522.png', // Dog image URL
+      iconSize: [50, 50], // Adjust icon size
+      iconAnchor: [25, 50], // Anchor point of the icon
+      popupAnchor: [0, -50] // Popup position
     });
 
     // Create a marker on the map at a given position
