mudei o dog para quadriciclo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
     // Create a custom icon for the marker (Dog image)
     const customIcon = L.icon({
-      iconUrl: 'https://png.pngtree.com/png-vector/20230922/ourmid/pngtree-brown-and-white-dog-png-image_10146522.png', // Dog image URL
+      //iconUrl: 'https://png.pngtree.com/png-vector/20230922/ourmid/pngtree-brown-and-white-dog-png-image_10146522.png', // cachorro image URL
+      iconUrl: ' https://www.honda.com.br/motos/sites/hda/files/2022-08/TRX%20Vermelha%202023%20Cor%20Eixo.png', // quadriciclo image URL
       iconSize: [50, 50], // Adjust icon size
       iconAnchor: [25, 50], // Anchor point of the icon
       popupAnchor: [0, -50] // Popup position
